[gd_scene load_steps=4 format=3 uid="uid://cji7wphvmp2v3"]

[ext_resource type="Script" path="res://Entity.gd" id="1_qcfs0"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ge6am"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_en3rw"]
size = Vector2(24, 24)

[node name="Entity" type="Node2D"]
scale = Vector2(4.56, 4.88)
script = ExtResource("1_qcfs0")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, -4.76837e-07)
scale = Vector2(24, 24)
texture = SubResource("CanvasTexture_ge6am")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_en3rw")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
